tests/baselines/reference/classConstructorAccessibility.errors.txt
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility.ts(15,9): error TS2673: Constructor of type '(x: number): D' is private and only accessible within class 'D'.
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility.ts(16,9): error TS2674: Constructor of type '(x: number): E' is protected and only accessible within class 'E'.
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility.ts(32,13): error TS2673: Constructor of type '<T>(x: T): D<T>' is private and only accessible within class 'D<T>'.
tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility.ts(33,13): error TS2674: Constructor of type '<T>(x: T): E<T>' is protected and only accessible within class 'E<T>'.


==== tests/cases/conformance/classes/constructorDeclarations/classConstructorAccessibility.ts (4 errors) ====
    
    class C {
        public constructor(public x: number) { }
    }
    
    class D {
        private constructor(public x: number) { }
    }
    
    class E {
        protected constructor(public x: number) { }
    }
    
    var c = new C(1);
    var d = new D(1); // error
            ~~~~~~~~
!!! error TS2673: Constructor of type '(x: number): D' is private and only accessible within class 'D'.
    var e = new E(1); // error
            ~~~~~~~~
!!! error TS2674: Constructor of type '(x: number): E' is protected and only accessible within class 'E'.
    
    module Generic {
        class C<T> {
            public constructor(public x: T) { }
        }
    
        class D<T> {
            private constructor(public x: T) { }
        }
    
        class E<T> {
            protected constructor(public x: T) { }
        }
    
        var c = new C(1);
        var d = new D(1); // error
                ~~~~~~~~
!!! error TS2673: Constructor of type '<T>(x: T): D<T>' is private and only accessible within class 'D<T>'.
        var e = new E(1); // error
                ~~~~~~~~
!!! error TS2674: Constructor of type '<T>(x: T): E<T>' is protected and only accessible within class 'E<T>'.
    }
    